fixed position of modals on small screens

--- a/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides-responsive.less
+++ b/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides-responsive.less
@@ -3,12 +3,6 @@
 //KAJONA FIX: up to 979
 @media (max-width: 979px) {
 
-    // Modals
-    .modal {
-        left:  50%;
-    }
-
-
     .input-large {
             max-width: 210px ;
     }
